manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpkg-backend-clusterip
spec:
  type: ClusterIP
  selector:
    app: dpkg-backend
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: dpkg-frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: dpkg-frontend
  ports:
  - port: 80
    targetPort: 3000
