manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - dpkgviewer.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /api/upload
        backend:
          serviceName: dpkg-backend-clusterip
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - dpkgviewer.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dpkg-frontend-clusterip
          servicePort: 80
